--- a/clinical-api-mvp/package.json
+++ b/clinical-api-mvp/package.json
@@ -9,19 +9,19 @@
     "test": "cross-env NODE_ENV=test jest"
   },
   "dependencies": {
+    "bcryptjs": "^3.0.3",
     "express": "^4.22.1",
+    "jsonwebtoken": "^9.0.3",
     "sequelize": "^6.37.7",
     "sqlite3": "^5.1.7"
   },
   "devDependencies": {
-    "nodemon": "^3.1.11",
+    "cross-env": "^7.0.3",
     "jest": "^29.0.0",
-    "supertest": "^6.3.3",
-    "cross-env": "^7.0.3"
+    "nodemon": "^3.1.11",
+    "supertest": "^6.3.3"
   },
   "jest": {
     "testEnvironment": "node"
   }
 }
-
-
